syntax = "proto3";

package userpb;

option go_package = "/buffers";

message CreateUserRequest {
    string name = 1;
    string email = 2;
    int32 age = 3;
    string address = 4;
    string phone = 5;
    string password = 6;
    string role = 7;
}

message CreateUserResponse {
    int32 status = 1;
    string body = 2;
}

message GetUserByIdRequest {
    string userId = 1;
}

message GetUserByIdResponse {
    string userId = 1;
    string name = 2;
    string email = 3;
    int32 age = 4;
    string address = 5;
    string phone = 6;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
}
